--- a/front/package.json
+++ b/front/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@expo/vector-icons": "^12.0.3",
     "@react-native-community/masked-view": "0.1.10",
+    "@react-native-community/viewpager": "^4.2.3",
     "@react-navigation/bottom-tabs": "5.11.8",
     "@react-navigation/native": "~5.8.10",
     "@react-navigation/stack": "~5.12.8",
@@ -29,16 +30,20 @@
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-40.0.1.tar.gz",
+    "react-native-check-box": "^2.1.7",
     "react-native-gesture-handler": "~1.8.0",
     "react-native-safe-area-context": "3.1.9",
     "react-native-screens": "~2.15.2",
-    "react-native-web": "~0.13.18"
+    "react-native-web": "~0.13.18",
+    "react-navigation": "^4.4.4"
   },
   "devDependencies": {
     "@babel/core": "~7.9.6",
     "@types/lodash": "^4.14.168",
     "@types/react": "~16.9.56",
     "@types/react-native": "~0.63.50",
+    "@types/react-native-check-box": "^2.1.1",
+    "@types/react-navigation": "^3.4.0",
     "jest-expo": "~40.0.2",
     "typescript": "~4.0.7"
   },
