--- a/front/package.json
+++ b/front/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "@expo/vector-icons": "^12.0.3",
     "@react-native-community/masked-view": "0.1.10",
+    "@react-native-community/viewpager": "^4.2.3",
     "@react-navigation/bottom-tabs": "5.11.8",
     "@react-navigation/native": "~5.9.3",
     "@react-navigation/stack": "~5.14.3",
@@ -34,7 +35,9 @@
     "react-native-gesture-handler": "~1.10.3",
     "react-native-safe-area-context": "3.1.9",
     "react-native-screens": "~2.18.1",
-    "react-native-web": "~0.15.0"
+    "react-native-web": "~0.15.0",
+    "react-native-check-box": "^2.1.7",
+    "react-navigation": "^4.4.4"
   },
   "devDependencies": {
     "@babel/core": "~7.13.8",
@@ -43,6 +46,8 @@
     "@types/react": "~17.0.2",
     "@types/react-native": "~0.63.50",
     "eslint": "^7.21.0",
+    "@types/react-native-check-box": "^2.1.1",
+    "@types/react-navigation": "^3.4.0",
     "jest-expo": "~40.0.2",
     "prettier": "^2.2.1",
     "typescript": "~4.2.3"
