--- a/front/package.json
+++ b/front/package.json
@@ -34,6 +34,7 @@
     "react-native-gesture-handler": "~1.8.0",
     "react-native-safe-area-context": "3.1.9",
     "react-native-screens": "~2.15.2",
+    "react-native-swiper-flatlist": "^3.0.14",
     "react-native-web": "~0.13.18",
     "react-navigation": "^4.4.4"
   },
